Fix bug sur version mobile

--- a/src/styles/Contact.css
+++ b/src/styles/Contact.css
@@ -71,6 +71,7 @@ textarea {
   .form__field {
     font-family: inherit;
     width: 100%;
+    height: 23px;
     border: 0;
     border-radius: 12px;
     outline: 0;
